syntax = "proto3";

package epam.market.banica.order.book.grpc;

option java_multiple_files = true;

message MarketDataRequest{
  string clientId = 1;
  string itemName = 2;
}
message TickResponse{
  string itemName = 1;
  uint64 quantity = 2;
  double price = 3;
  int64 timestamp = 4;
  Origin origin = 5;
}
enum Origin{
  UNSPECIFIED = 0;
  AMERICA = 1;
  ASIA = 2;
  EUROPE = 3;
}

service MarketDataService {
  rpc getMarketData(MarketDataRequest) returns (stream TickResponse);
}